# customer-churn-prediction

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: customer_churn_prediction.ipynb
src/: cli.py
src/data/: generator.py
src/eda/: analysis.py
src/features/: engineering.py
src/models/: evaluator.py  trainer.py
tests/: test_features.py  test_generator.py  test_models.py
